# Brott

./: .gitignore  LICENSE  README.md  bot.py  pyproject.toml
.github/: deploy.yml
.github/workflows/: deploy.yml
config/: config.json
data/: channelBlacklist.csv  feurlog.csv
features/: channelFilter.py  feur.py  feurlog.csv  logging.py
features/link_fix/: service.py
