[tool.poetry]
name = "brott"
version = "0.0.1"
description = "collaborative project between friends, a discord bot for whatever"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8.1"
flake8 = "^6.0.0"
discord = "^2.2.2"
discord-py = "^2.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
